--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -21,6 +21,7 @@
     "@svgr/webpack": "^8.1.0",
     "@uniswap/sdk-core": "~4.0.1",
     "@uniswap/v2-sdk": "~3.0.1",
+    "axios": "^1.6.6",
     "blo": "~1.0.1",
     "daisyui": "~4.4.19",
     "next": "~14.0.4",
