display poaps and make code more reusable

--- a/packages/nextjs/.env.example
+++ b/packages/nextjs/.env.example
@@ -13,3 +13,4 @@
 # use localhost 3000 in your .env.local file but change to actual vercel deployment in production environment
 NEXT_PUBLIC_VERCEL_URL=http://localhost:3000 
 ALCHEMY_API_KEY=
+POAP_API_KEY=
